fix: overflow on scrollbar

--- a/src/components/CustomScrollbar/CustomScrollbar.css
+++ b/src/components/CustomScrollbar/CustomScrollbar.css
@@ -2,7 +2,8 @@
     height: 100%;
     scrollbar-width: thin;
     padding: 0 10px 10px 10px;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
 } 
  
 .scrollable-container Table thead {
